--- a/English.lproj/UpdateSheet.xib
+++ b/English.lproj/UpdateSheet.xib
@@ -923,27 +923,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
-						<string key="label">sheetButtonOkForUpdateSheet:</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="715708594"/>
-					</object>
-					<int key="connectionID">93</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
 						<string key="label">sheetButtonViewDifferencesForUpdateSheet:</string>
 						<reference key="source" ref="1001"/>
 						<reference key="destination" ref="14778485"/>
 					</object>
 					<int key="connectionID">94</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">sheetButtonCancelForUpdateSheet:</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="766248391"/>
-					</object>
-					<int key="connectionID">95</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -1032,6 +1016,22 @@
 						<reference key="destination" ref="1001"/>
 					</object>
 					<int key="connectionID">127</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">sheetButtonCancel:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="766248391"/>
+					</object>
+					<int key="connectionID">128</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">sheetButtonOk:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="715708594"/>
+					</object>
+					<int key="connectionID">129</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1641,7 +1641,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">127</int>
+			<int key="maxID">129</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1756,8 +1756,8 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>openUpdateSheetWithCurrentRevision:</string>
-							<string>sheetButtonCancelForUpdateSheet:</string>
-							<string>sheetButtonOkForUpdateSheet:</string>
+							<string>sheetButtonCancel:</string>
+							<string>sheetButtonOk:</string>
 							<string>sheetButtonViewDifferencesForUpdateSheet:</string>
 							<string>validate:</string>
 						</object>
